Bug 164790 - krunner cuts web shortcuts after ':'
Summary: krunner cuts web shortcuts after ':'
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-06-23 22:58 UTC by Simon Birnbach
Modified: 2008-06-23 23:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Simon Birnbach 2008-06-23 22:58:11 UTC
Version:            (using KDE 4.0.80)
Installed from:    Unlisted Binary Package
OS:                Linux

krunner cuts off everything after ':' (not the delimiter) in a web shortcut

Example:
gg:searchs for this: but not for that
will result in a query for "searchs for this"

Testing it in Konqueror gave the expected result. (queries for "searchs for this: but not for that")
(I am using the packages from debian experimental -> 4.0.82+svn819867-1)
Comment 1 Aaron J. Seigo 2008-06-23 23:47:53 UTC
SVN commit 823713 by aseigo:

* don't try and get favicons; it's waaaay too slow to be useful in a hot path like this (should we eventually offer a "polish" type option for runners to lazily touch up good matches?)

* don't split on ':', grab the string to the right of the first one
BUG:164790



 M  +13 -10    webshortcutrunner.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=823713