* don't try and get favicons; it's waaaay too slow to be useful in a hot path like this (should we eventually offer a "polish" type option for runners to lazily touch up good matches?)

* don't split on ':', grab the string to the right of the first one
BUG:164790


svn path=/trunk/KDE/kdebase/workspace/; revision=823713